src/objects/Executive_Summary_Note__c.object
<CustomObject>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Executive Summary Notes</relationshipLabel>
        <relationshipName>Executive_Summary_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <defaultValue>$User.Department</defaultValue>
        <description>Populated from User&apos;s Department</description>
        <inlineHelpText>Populated from User&apos;s Department</inlineHelpText>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data Issue</fullName>
                </value>
                <value>
                    <fullName>Client Issue</fullName>
                </value>
                <value>
                    <fullName>Partner Issue</fullName>
                </value>
                <value>
                    <fullName>Marketing Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Path_to_Resolution__c</fullName>
        <description>In one or two sentences, describe the actions you will take to resolve issue:</description>
        <inlineHelpText>In one or two sentences, describe the actions you will take to resolve issue:</inlineHelpText>
        <label>Path to Resolution</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Issue_s__c</fullName>
        <label>Sub Issue(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Issue__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Data</fullName>
                </value>
                <value>
                    <fullName>Data file processing issues</fullName>
                </value>
                <value>
                    <fullName>Data not processed on time</fullName>
                </value>
                <value>
                    <fullName>Partial data received - proceeding with launch</fullName>
                </value>
                <value>
                    <fullName>Client still in contracting</fullName>
                </value>
                <value>
                    <fullName>Awaiting schedule of kick off call</fullName>
                </value>
                <value>
                    <fullName>Client unresponsive</fullName>
                </value>
                <value>
                    <fullName>Client requested later launch or enrollment date</fullName>
                </value>
                <value>
                    <fullName>Client edit delays</fullName>
                </value>
                <value>
                    <fullName>Marketing hold request</fullName>
                </value>
                <value>
                    <fullName>Partner unresponsive</fullName>
                </value>
                <value>
                    <fullName>Partner restrictions</fullName>
                </value>
                <value>
                    <fullName>Missing required paperwork (e.g. ESI PHI release)</fullName>
                </value>
                <value>
                    <fullName>Misaligned expectations on data/file handoff timeline</fullName>
                </value>
                <value>
                    <fullName>Awaiting client or partner marketing approval</fullName>
                </value>
                <value>
                    <fullName>Enrollment marketing not launched on time</fullName>
                </value>
                <value>
                    <fullName>Client requires extra internal marketing approvals</fullName>
                </value>
                <value>
                    <fullName>Doc control review preventing enrollment deployment</fullName>
                </value>
                <value>
                    <fullName>Data issues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Executive Summary Note</label>
    <nameField>
        <displayFormat>ESN-{0000}</displayFormat>
        <label>Executive Summary Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Executive Summary Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>